Get, Post, Put and Delete for classes
